--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=howmuchah
+
+# Supabase PostgreSQL Connection
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=postgres
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Supabase JWT Configuration
+supabase.jwt.secret=${SUPABASE_JWT_SECRET}
+supabase.url={SUPABASE_URL}
+
+# Security
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${SUPABASE_URL}/auth/v1
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
