--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ supabase.url={SUPABASE_URL}
 
 # Security
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${SUPABASE_URL}/auth/v1
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://127.0.0.1:3000}
