feat: added partial invitation endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,7 +38,5 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 # Logging
 logging.level.root=INFO
 logging.level.com.jlgs.howmuchah=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.security=WARN
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
