--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.jlgs</groupId>
 	<artifactId>howmuchah</artifactId>
-	<version>0.6.0</version>
+	<version>0.7.0</version>
 	<name>howmuchah</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -86,6 +86,10 @@
             <groupId>com.bucket4j</groupId>
             <artifactId>bucket4j_jdk17-core</artifactId>
             <version>8.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 	</dependencies>
 
