ci: add dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,7 @@ logging.level.root=INFO
 logging.level.com.jlgs.howmuchah=DEBUG
 logging.level.org.springframework.security=WARN
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Health
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=when-authorized
