--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.jlgs</groupId>
 	<artifactId>howmuchah</artifactId>
-	<version>0.7.0</version>
+	<version>1.0.0</version>
 	<name>howmuchah</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
@@ -90,6 +90,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 	</dependencies>
 
