fix: resolve mvnw permission issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jackson.default-property-inclusion=non_null
 
 # Supabase JWT Configuration
 supabase.jwt.secret=${SUPABASE_JWT_SECRET}
-supabase.url={SUPABASE_URL}
+supabase.url=${SUPABASE_URL}
 
 # Security
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${SUPABASE_URL}/auth/v1
