--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=3
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.initialization-fail-timeout=-1
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=900000
-spring.datasource.hikari.connection-test-query=SELECT 1
-spring.datasource.hikari.validation-timeout=5000
-spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=validate
