--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=howmuchah
 
+# App Base URL
+app.base-url=${BASE_URL:http://localhost:3000}
+
 # Supabase PostgreSQL Connection
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=postgres
