perf: allow lazy loading of beans, disable jmx and optimize actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,11 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
 # Health
 management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=never
+
+# Performance Optimization
+spring.main.lazy-initialization=true
+spring.jmx.enabled=false
+management.metrics.enable.jvm=false
+management.metrics.enable.process=false
+management.metrics.enable.system=false
