config: disable websocket heartbeat stats that were spamming the logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,8 @@ logging.level.root=INFO
 logging.level.com.jlgs.howmuchah=DEBUG
 logging.level.org.springframework.security=WARN
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.org.springframework.web.socket=WARN
+logging.level.org.springframework.messaging=WARN
 
 # Health
 management.endpoints.web.exposure.include=health
