Feat/optimize deployment (#27)
* perf: update dockerfile to include CDS and more aggressive flags

* perf: allow lazy loading of beans, disable jmx and optimize actuator

* config: disable websocket heartbeat stats that were spamming the logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,7 +50,16 @@ logging.level.root=INFO
 logging.level.com.jlgs.howmuchah=DEBUG
 logging.level.org.springframework.security=WARN
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.level.org.springframework.web.socket=WARN
+logging.level.org.springframework.messaging=WARN
 
 # Health
 management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=when-authorized
+management.endpoint.health.show-details=never
+
+# Performance Optimization
+spring.main.lazy-initialization=true
+spring.jmx.enabled=false
+management.metrics.enable.jvm=false
+management.metrics.enable.process=false
+management.metrics.enable.system=false
